Bibliography revised till [100] + various fixes

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -202,7 +202,7 @@
   address   = {San Diego, CA},
   month     = {February},
   year      = 2008,
-  url       = {http://www.isoc.org/isoc/conferences/ndss/08/papers/14_automatic_protocol_format.pdf}
+  note = {URL: \url{http://www.isoc.org/isoc/conferences/ndss/08/papers/14_automatic_protocol_format.pdf}. Accessed: 2016-06-13.}
 }
 
 @article{Ponder88,
@@ -304,6 +304,8 @@
   Editors = {A. Nayak and I. Stojmenovic (eds)},
   Publisher = {John Wiley \& Sons},
   Title = {{Algorithms for Data Streams}},
+  doi = {10.1002/9780470175668.ch8},
+  url = {http://dx.doi.org/10.1002/9780470175668.ch8},  
   Volume = {241},
   Year = {2007}
 }
@@ -356,6 +358,7 @@
   Address = {Chichester, UK},
   Author = {Bernat, Andrew R. and Miller, Barton P.},
   Doi = {10.1002/cpe.v19:11},
+  url = {http://dx.doi.org/10.1002/cpe.v19:11},
   Issn = {1532-0626},
   Issue_Date = {August 2007},
   Journal = {Concurrency and Computation: Practice and Experience},
@@ -428,7 +431,7 @@
   Pages = {117--126},
   Title = {{Bursty Tracing: A Framework for Low-Overhead Temporal Profiling}},
   Year = {2001},
-  Url = {http://research.microsoft.com/en-us/um/people/trishulc/papers/bursts_fddo.pdf}
+  note = {URL: \url{http://research.microsoft.com/en-us/um/people/trishulc/papers/bursts_fddo.pdf}. Accessed: 2016-06-13}
 }
 
 @inproceedings{Serrano09,
@@ -599,7 +602,7 @@
   Acmid = {1993559},
   Address = {New York, NY, USA},
   Author = {D'Elia, Daniele Cono and Demetrescu, Camil and Finocchi, Irene},
-  Booktitle = {Proceedings of the 32Nd ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  Booktitle = {Proceedings of the 32nd ACM SIGPLAN Conference on Programming Language Design and Implementation},
   Doi = {10.1145/1993498.1993559},
   Isbn = {978-1-4503-0663-8},
   Keywords = {data streaming algorithms, dynamic program analysis, frequent items, performance profiling, program instrumentation},
@@ -608,7 +611,7 @@
   Pages = {516--527},
   Publisher = {ACM},
   Series = {PLDI '11},
-  Title = {Mining Hot Calling Contexts in Small Space},
+  Title = {{Mining Hot Calling Contexts in Small Space}},
   Url = {http://doi.acm.org/10.1145/1993498.1993559},
   Year = {2011}
 }
@@ -674,6 +677,7 @@
   pages = {478--490},
   numpages = {13},
   doi = {10.1109/TC.1981.1675827},
+  url = {http://dx.doi.org/10.1109/TC.1981.1675827},
   acmid = {1311325},
   publisher = {IEEE Computer Society},
   address = {Washington, DC, USA},
@@ -720,6 +724,7 @@
   pages = {64--76},
   numpages = {13},
   doi = {10.1145/301618.301643},
+  url = {http://doi.acm.org/10.1145/301618.301643},
   acmid = {301643},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -737,6 +742,7 @@
   pages = {146--158},
   numpages = {13},
   doi = {10.1145/258915.258929},
+  url = {http://doi.acm.org/10.1145/258915.258929},
   acmid = {258929},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -773,6 +779,7 @@
   pages = {596--611},
   numpages = {16},
   doi = {10.1145/989393.989453},
+  url = {http://doi.acm.org/10.1145/989393.989453},
   acmid = {989453},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -956,7 +963,7 @@
 @inproceedings{Delia13,
   author = {D'Elia, Daniele Cono and Demetrescu, Camil},
   title = {{Ball-Larus Path Profiling Across Multiple Loop Iterations}},
-  booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object Oriented Programming Systems Languages \&\#38; Applications},
+  booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object Oriented Programming Systems Languages \& Applications},
   series = {OOPSLA '13},
   year = {2013},
   isbn = {978-1-4503-2374-1},
@@ -1037,12 +1044,12 @@
   author = {Pizlo, Filip},
   title = {Introducing the {WebKit} {FTL} {JIT}},
   type = {Blog},
-  note = {\url{https://www.webkit.org/blog/3362/} Accessed: 2016-01-09}
+  note = {URL: \url{https://www.webkit.org/blog/3362/}. Accessed: 2016-01-09}
 }
 
 @inproceedings{Lameed13,
   author = {Lameed, Nurudeen A. and Hendren, Laurie J.},
-  title = {{A Modular Approach to On-stack Replacement in LLVM}},
+  title = {{A Modular Approach to On-Stack Replacement in LLVM}},
   booktitle = {Proceedings of the 9th ACM SIGPLAN/SIGOPS International Conference on Virtual Execution Environments},
   series = {VEE '13},
   year = {2013},
@@ -1084,7 +1091,8 @@
   year = {2004},
   isbn = {0-7695-2102-9},
   location = {Palo Alto, California},
-  pages = {75--},
+  pages = {75--86},
+  doi = {10.1109/cgo.2004.1281665},
   url = {http://dl.acm.org/citation.cfm?id=977395.977673},
   acmid = {977673},
   publisher = {IEEE Computer Society},
@@ -1121,6 +1129,7 @@
   pages = {244--263},
   numpages = {20}, 
   doi = {10.1145/5397.5399},
+  url = {http://doi.acm.org/10.1145/5397.5399},
   acmid = {5399},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1139,6 +1148,7 @@
   pages = {173--206},
   numpages = {34},
   doi = {10.1023/B:LISP.0000029444.99264.c0},
+  url = {http://dx.doi.org/10.1023/B:LISP.0000029444.99264.c0},
   acmid = {993038},
   publisher = {Kluwer Academic Publishers},
   address = {Hingham, MA, USA},
@@ -1159,6 +1169,7 @@
   articleno = {14},
   numpages = {48},  
   doi = {10.1145/1516507.1516509},
+  url = {http://doi.acm.org/10.1145/1516507.1516509},
   acmid = {1516509},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1176,6 +1187,7 @@
   pages = {327--337},
   numpages = {11},
   doi = {10.1145/1542476.1542513},
+  url = {http://doi.acm.org/10.1145/1542476.1542513},
   acmid = {1542513},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1195,6 +1207,7 @@
   pages = {603--625},
   numpages = {23}, 
   doi = {10.1145/504709.504710},
+  url = {http://doi.acm.org/10.1145/504709.504710},
   acmid = {504710},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1212,6 +1225,7 @@
   pages = {283--294},
   numpages = {12}, 
   doi = {10.1145/503272.503299},
+  url = {http://doi.acm.org/10.1145/503272.503299},
   acmid = {503299},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1228,6 +1242,7 @@
   pages = {220--231},
   numpages = {12}, 
   doi = {10.1145/781131.781156},
+  url = {http://doi.acm.org/10.1145/781131.781156},
   acmid = {781156},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1245,6 +1260,7 @@
   pages = {364--377},
   numpages = {14},
   doi = {10.1145/1040305.1040335},
+  url = {http://doi.acm.org/10.1145/1040305.1040335},
   acmid = {1040335},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1262,6 +1278,7 @@
   pages = {563--574},
   numpages = {12}, 
   doi = {10.1145/1926385.1926450},
+  url = {http://doi.acm.org/10.1145/1926385.1926450},
   acmid = {1926450},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1280,6 +1297,7 @@
   pages = {1--12},
   numpages = {12}, 
   doi = {10.1145/349299.349303},
+  url = {http://doi.acm.org/10.1145/349299.349303},
   acmid = {349303},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1296,6 +1314,7 @@
   pages = {465--478},
   numpages = {14}, 
   doi = {10.1145/1542476.1542528},
+  url = {http://doi.acm.org/10.1145/1542476.1542528},
   acmid = {1542528},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1458,6 +1477,7 @@
   pages = {451--490},
   numpages = {40},
   doi = {10.1145/115372.115320},
+  url = {http://doi.acm.org/10.1145/115372.115320},
   acmid = {115320},
   publisher = {ACM},
   address = {New York, NY, USA},
@@ -1518,13 +1538,14 @@
   address = {New York, NY, USA}
 }
 
-@Inbook{Jaramillo00,
+@inproceedings{Jaramillo00,
   author = {Jaramillo, Clara and Gupta, Rajiv and Soffa, Mary Lou},
-  editor = {Palsberg, Jens},
-  chapter = {{{FULLDOC}: A Full Reporting Debugger for Optimized Code}},
-  title = {Static Analysis: 7th International Symposium, SAS 2000, Santa Barbara, CA, USA, June 29 - July 1, 2000. Proceedings},
+  title = {{{FULLDOC}: A Full Reporting Debugger for Optimized Code}},
+  booktitle = {Proceedings of the 7th International Symposium on Static Analysis},
+  location = {Santa Barbara, CA, USA},
   year = {2000},
-  publisher = {Springer Berlin Heidelberg},
+  series = {SAS '00},
+  publisher = {Springer},
   address = {Berlin, Heidelberg},
   pages = {240--259},
   isbn = {978-3-540-45099-3},
@@ -1555,7 +1576,8 @@
   title = {{Source-Level Debugging of Globally Optimized Code}},
   year = {1996},  
   publisher = {Carnegie Mellon University},
-  address = {Pittsburgh, PA, USA}
+  address = {Pittsburgh, PA, USA},
+  url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.73.5762}
 }
 
 @inproceedings{Wu99,
@@ -1648,9 +1670,10 @@
   booktitle = {Proceedings of the International Symposium on Code Generation and Optimization: Feedback-directed and Runtime Optimization},
   series = {CGO '03},
   year = {2003},
+  doi = {10.1109/cgo.2003.1191549},
+  url = {http://dx.doi.org/10.1109/cgo.2003.1191549},
   pages = {241--252},
-  organization = {IEEE Computer Society},
-  url = {http://dl.acm.org/citation.cfm?id=776288}
+  organization = {IEEE Computer Society}
 }
 
 @inproceedings{Soman06,
@@ -1837,7 +1860,7 @@
   location = {San Diego, California},
   pages = {31--44},
   numpages = {14},
-  url = {http://dl.acm.org/citation.cfm?id=1855807.1855838},
+  note = {URL: \url{http://static.usenix.org/legacy/events/usenix09/tech/full_papers/makris/makris.pdf}. Accessed: 2016-06-13},
   acmid = {1855838},
   publisher = {USENIX Association},
   address = {Berkeley, CA, USA}
@@ -1888,6 +1911,7 @@
   pages = {83--94},
   numpages = {12}, 
   doi = {10.1145/349299.349314},
+  url = {http://doi.acm.org/10.1145/349299.349314},
   acmid = {349314},
   publisher = {ACM},
   address = {New York, NY, USA}
@@ -1904,6 +1928,7 @@
   pages = {125--134},
   numpages = {10},
   doi = {10.1145/53990.54003},
+  url = {http://doi.acm.org/10.1145/53990.54003},
   acmid = {54003},
   publisher = {ACM},
   address = {New York, NY, USA}
@@ -2018,6 +2043,7 @@
   pages = {449-466}, 
   keywords = {optimisation;optimising compilers;virtual machines;adaptive optimization systems;automatic memory management;feedback directed optimization;modular program representations;online monitoring;online profiling;production level technology;runtime compilation;software performance evaluation;static optimizers;virtual machines;Adaptive systems;Condition monitoring;Costs;Memory management;Optimized production technology;Production systems;Runtime;Security;Virtual machine monitors;Virtual machining;Adaptive optimization;dynamic optimization;feedback-directed optimization (FDO);virtual machines}, 
   doi = {10.1109/JPROC.2004.840305}, 
+  url = {http://dx.doi.org/10.1109/JPROC.2004.840305},
   ISSN = {0018-9219}, 
   month = {Feb}
 }
@@ -2134,8 +2160,8 @@
 
 @article{Aycock03,
   author = {Aycock, John},
-  title = {A Brief History of Just-in-time},
-  journal = {ACM Comput. Surv.},
+  title = {{A Brief History of Just-in-time}},
+  journal = {ACM Computing Surveys},
   issue_date = {June 2003},
   volume = {35},
   number = {2},
@@ -2155,7 +2181,7 @@
 @article{Futamura99,
   author = {Futamura, Yoshihiko},
   title = {{Partial Evaluation of Computation Process\&Mdash;AnApproach to a Compiler-Compiler}},
-  journal = {Higher Order Symbol. Comput.},
+  journal = {Higher Order and Symbolic Computation},
   issue_date = {December 1999},
   volume = {12},
   number = {4},
@@ -2174,7 +2200,7 @@
 
 @inproceedings{Marr15,
   author = {Marr, Stefan and Ducasse, St{\'e}phane},
-  title = {{Tracing vs. Partial Evaluation: Comparing Meta-compilation Approaches for Self-optimizing Interpreters}},
+  title = {{Tracing vs. Partial Evaluation: Comparing Meta-compilation Approaches for Self-Optimizing Interpreters}},
   booktitle = {Proceedings of the 2015 ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications},
   series = {OOPSLA 2015},
   year = {2015},
@@ -2265,6 +2291,7 @@
   pages={96-105}, 
   keywords={computational complexity;parallel programming;program compilers;software reusability;subroutines;code size;compiler;complexity;forward interprocedural data-flow solutions;interprocedural optimization;procedure bodies;procedure cloning;running time;specialized copies;three-phase algorithm;Algorithm design and analysis;Cloning;Computer science;Data analysis;Degradation;Optimizing compilers;Program processors;Runtime}, 
   doi={10.1109/ICCL.1992.185472}, 
+  url={http://dx.doi.org/10.1109/ICCL.1992.185472},
   month={Apr}
 }
 
@@ -2324,7 +2351,8 @@
   isbn = {3-540-65717-7},
   pages = {47--62},
   numpages = {16},
-  url = {http://dl.acm.org/citation.cfm?id=647475.727620},
+  doi = {10.1007/978-3-540-49051-7_4},
+  url = {http://dx.doi.org/10.1007/978-3-540-49051-7_4},
   acmid = {727620},
   publisher = {Springer-Verlag},
   address = {London, UK, UK}
@@ -2337,7 +2365,6 @@
   issn = {1097-024X},
   url = {http://dx.doi.org/10.1002/spe.2348},
   doi = {10.1002/spe.2348},
-  pages = {n/a--n/a},
   keywords = {performance profiling, dynamic program analysis, data streaming algorithms, frequent items, program instrumentation},
   year = {2015}
 }
@@ -2363,47 +2390,47 @@
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
-  note = {\url{https://perf.wiki.kernel.org/} Accessed: 2016-02-15}
+  note = {URL: \url{https://perf.wiki.kernel.org/}. Accessed: 2016-02-15}
 }
 
 @misc{Phoronix,
   author = {{Phoronix Test Suite (PTS)}},
-  note = {\url{http://www.phoronix-test-suite.com/} Accessed: 2016-03-27}
+  note = {URL: \url{http://www.phoronix-test-suite.com/}. Accessed: 2016-03-27}
 }
 
 @misc{SpecJVM2008,
  author = {{SPECjvm2008 Java Virtual Machine Benchmark}},
- note = {\url{https://www.spec.org/jvm2008/} Accessed: 2016-03-27}
+ note = {URL: \url{https://www.spec.org/jvm2008/}. Accessed: 2016-03-27}
 }
 
 @misc{PEP,
   author = {{Jikes RVM Research Archive}},
   title = {{{PEP}: continuous path and edge profiling}},
-  note = {\url{http://jikesrvm.org/Research+Archive}. Accessed: 2016-03-27}
+  note = {URL: \url{http://jikesrvm.org/Research+Archive}. Accessed: 2016-03-27}
 }
 
 @misc{shootout,
   author = {Fulgham, Brent and Gouy, Isaac},
   title = {{The {C}omputer {L}anguage {B}enchmarks {G}ame}},
-  note = {\url{http://benchmarksgame.alioth.debian.org/}. Accessed: 2016-03-25}
+  note = {URL: \url{http://benchmarksgame.alioth.debian.org/}. Accessed: 2016-03-25}
 }
 
 @misc{mcvm,
   author = {{The McLab project}},
   title = {{Sable McVM}},
-  note = {\url{https://github.com/Sable/mcvm}. Accessed: 2016-01-13}
+  note = {URL: \url{https://github.com/Sable/mcvm}. Accessed: 2016-01-13}
 }
 
 @misc{simanl,
   author = {H\^{e}ctor Corte},
   title = {{Simulated Annealing Optimization}},
-  note = {\url{http://www.mathworks.com/matlabcentral/fileexchange/33109-simulated-annealing-optimization}. Accessed: 2016-03-26}
+  note = {URL: \url{http://www.mathworks.com/matlabcentral/fileexchange/33109-simulated-annealing-optimization}. Accessed: 2016-03-26}
 }
 
 @misc{luajit,
   author = {Pall, Mike},
   title = {{LuaJIT 2.0 intellectual property disclosure and research opportunities}},
-  note = {\url{http://lua-users.org/lists/lua-l/2009-11/msg00089.html}. Accessed: 2016-01-13},
+  note = {URL: \url{http://lua-users.org/lists/lua-l/2009-11/msg00089.html}. Accessed: 2016-01-13},
 }
 
 @misc{vitek16,
