--- a/figures/hcct-slowdown/caption.tex
+++ b/figures/hcct-slowdown/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:hcct-slowdown} Runtime analysis for CCT and $(\phi,\varepsilon)$-HCCT construction compared to (a) native executions and (b) executions under \gprof. The {\em empty} bars measure the cost of instrumenting function calls and returns. SS with stating bursting has been executed with sampling interval 20 msec and burst length 2 msec.
+\label{fig:hcct-slowdown} Run-time analysis for CCT and $(\phi,\varepsilon)$-HCCT construction compared to (a) native executions and (b) executions under \gprof. The {\em empty} bars measure the cost of instrumenting function calls and returns. SS with stating bursting has been executed with sampling interval 20 msec and burst length 2 msec.
