--- a/case-study-mcvm.tex
+++ b/case-study-mcvm.tex
@@ -16,7 +16,7 @@ McVM implements a function versioning mechanism based on type specialization, wh
 \subsection{Current Approaches}
 \label{ss:CS-prev-eval-sol}
 
-Lameed and Hendren~\cite{Lameed2013b} proposed two dynamic techniques for optimizing \feval\ instructions in McVM: {\em JIT-based} and {\em OSR-based} specialization. Both attempt to optimize a function $f$ that contains instructions of the form \feval$(g,...)$, leveraging information about $g$ and the type of its arguments observed at run-time. The optimization produces a specialized version $f'$ where \feval$(g,x,y,z,...)$ instructions are replaced with direct calls of the form $g(x,y,z,...)$. 
+Lameed and Hendren~\cite{Lameed2013b} proposed two dynamic techniques for optimizing \feval\ instructions in McVM: {\em JIT-based} and {\em OSR-based} specialization. Both attempt to optimize a function $f$ that contains instructions of the form \feval$(g,...)$, leveraging information about $g$ and the type of its arguments observed at run time. The optimization produces a specialized version $f'$ where \feval$(g,x,y,z,...)$ instructions are replaced with direct calls of the form $g(x,y,z,...)$. 
 
 The two approaches differ in the points where code specialization is performed. In JIT-based specialization, $f'$ is generated when $f$ is called. In contrast, the OSR-based method interrupts $f$ as it executes, generates a specialized version $f'$, and resumes from it.  
 
@@ -59,7 +59,7 @@ We implemented our approach in McVM\footnote{As a by-product of our project, we 
 
 \noindent We remark that our implementation heavily depends on \osrkit's ability to handle compensation code. 
 
-\paragraph*{Analysis Pass.} The analysis pass, which is fully integrated in McVM's analysis manager, groups \feval\ instructions whose first argument is reached by the same definition, and for each group marks for instrumentation only those instructions that are not dominated by others, so that the function can be optimized as early as possible at run-time.
+\paragraph*{Analysis Pass.} The analysis pass, which is fully integrated in McVM's analysis manager, groups \feval\ instructions whose first argument is reached by the same definition, and for each group marks for instrumentation only those instructions that are not dominated by others, so that the function can be optimized as early as possible at run time.
 It also determines whether the value of the argument can change across two executions of the same \feval, and a run-time guard must thus be inserted during the optimization phase.
 
 \paragraph*{IIR Compiler Extension.} The extension operates when the IIR compiler processes an annotated \feval\ instruction. It builds a {\em variable map} between IIR and IR objects, and keeps track of the {\tt llvm::BasicBlock*} $b$ created for the \feval\ in the IR code and of the {\tt llvm::Value*} object $g$ used as its first argument. 
@@ -98,9 +98,9 @@ Once a state mapping has been constructed, the optimizer asks \osrkit\ to genera
 \subsection{Performance Analysis}
 We now analyze the impact of our optimization technique for \feval\ on the running time of a few numeric benchmarks, namely {\tt odeEuler}, {\tt odeMidpt}, {\tt odeRK4}, and {\tt sim\_anl}. The first three benchmarks~\cite{Recktenwald2000} solve an ordinary differential equation for heat treating simulation using the Euler, midpoint, and Range-Kutta method, respectively; the last benchmark minimizes the six-hump camelback function with the method of simulated annealing~\cite{simanl}.
 
-We report the speed-ups enabled by our technique in \mytable\ref{tab:CS-feval}, using the running times for McVM's \feval\ default dispatcher as baseline. As the dispatcher typically JIT-compiles the invoked function, we also analyzed running times when the dispatcher calls a previously compiled function. In the last column, we show speed-ups from a modified version of the benchmarks in which each \feval\ call is replaced by hand with a direct call to the function in use for the specific benchmark.
+We report the speedups enabled by our technique in \mytable\ref{tab:CS-feval}, using the running times for McVM's \feval\ default dispatcher as baseline. As the dispatcher typically JIT-compiles the invoked function, we also analyzed running times when the dispatcher calls a previously compiled function. In the last column, we show speedups from a modified version of the benchmarks in which each \feval\ call is replaced by hand with a direct call to the function in use for the specific benchmark.
 
-Unfortunately, we are unable to compute direct performance metrics for the solution by Lameed and Hendren as its source code has not been released. Figures in their paper~\cite{Lameed2013b} show that for the very same MATLAB programs the speed-up of the OSR-based approach is on average within $30.1\%$ of the speed-up of hand-coded optimization (ranging from $9.2\%$ to $73.9\%$); for the JIT-based approach, the average grows to $84.7\%$ (ranging from $75.7\%$ to $96.5\%$).
+Unfortunately, we are unable to compute direct performance metrics for the solution by Lameed and Hendren as its source code has not been released. Figures in their paper~\cite{Lameed2013b} show that for the very same MATLAB programs the speedup of the OSR-based approach is on average within $30.1\%$ of the speedup of hand-coded optimization (ranging from $9.2\%$ to $73.9\%$); for the JIT-based approach, the average grows to $84.7\%$ (ranging from $75.7\%$ to $96.5\%$).
 
 \begin{table}[ht!]
 \begin{center}
@@ -128,7 +128,7 @@ sim\_anl & 1.009 & 1.564 & 1.606 & 1.612 \\
 \caption{\label{tab:CS-feval} Q4: Speedup comparison for \feval\ optimization.} 
 \end{table}
 
-\noindent Our optimization technique yields speed-ups that are very close to the upper bound given from by-hand optimization; in the worst case ({\tt odeRK4} benchmark), we observe a $94.1\%$ when the optimized code is generated on the fly, which becomes $97.5\%$ when a cached version is available. Compared to their OSR-based approach, the compensation entry block is a key driver of improved performance, as the benefits from a better type-specialized whole function body outweigh those from performing a direct call using boxed arguments and return values in place of the original \feval.
+\noindent Our optimization technique yields speedups that are very close to the upper bound given from by-hand optimization; in the worst case ({\tt odeRK4} benchmark), we observe a $94.1\%$ when the optimized code is generated on the fly, which becomes $97.5\%$ when a cached version is available. Compared to their OSR-based approach, the compensation entry block is a key driver of improved performance, as the benefits from a better type-specialized whole function body outweigh those from performing a direct call using boxed arguments and return values in place of the original \feval.
 
 \noindent For the \mytt{sim\_anl} benchmark, \osrkit's support for OSR point insertion at arbitrary locations allowed our optimization pipeline to instrument an \feval\ instruction that occurs before the main loop and pollutes type inference information for the rest of the code: in fact, the OSR-based solution by Lameed and Hendren yielded a very limited performance improvement for this benchmark.
 
